// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2;

option csharp_namespace = "Com.Daml.Ledger.Api.V2";
option java_outer_classname = "ExperimentalFeaturesOuterClass";
option java_package = "com.daml.ledger.api.v2";

/*
   IMPORTANT: in contrast to other parts of the Ledger API, only json-wire backwards
              compatibility guarantees are given for the messages in this file.
*/

// See the feature message definitions for descriptions.
message ExperimentalFeatures {
  ExperimentalStaticTime static_time = 1;
}

// Ledger is in the static time mode and exposes a time service.
message ExperimentalStaticTime {
  bool supported = 1;
}
